# thanks-for-all-the-phish

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
tests/: test_auth.py  test_config.py  test_html_rewrite.py  test_inject.py  test_internal_external.py  test_link_analysis.py  test_loop_guard.py  test_security_boundaries.py  test_sync_state.py
tfatp/: __init__.py  __main__.py  addr.py  analyze_eml.py  attachments.py  auth.py  client.py  config.py  defang_policy.py  directory.py  dkim_verify.py  domain_watcher.py  idle_watcher.py  link_analysis.py  lookalike.py  loop_guard.py  org_domains.py  pubsub_watcher.py  rewriter.py  smtp_verify.py  sync_state.py  watcher.py
tfatp/cli/: __init__.py  analyze_eml.py  diff_message.py  dkim_verify.py  inject_eml.py  phishing_test.py  replace_message.py  watch_domain.py  watch_mailbox.py
