[project]
name = "thanks-for-all-the-phish"
version = "0.1.0"
description = "Google Workspace Anti-Phishing Tool"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.149.0",
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "imapclient==3.0.1",
    "dkimpy==1.1.8",
    "dnspython==2.7.0",
    "tldextract==5.1.3",
    "beautifulsoup4==4.12.3",
    "google-cloud-pubsub==2.26.1",
    "rapidfuzz==3.10.1",
    "confusable-homoglyphs==3.3.1",
    "drawbridge==0.1.2",
    "httpx==0.28.1",
    "olefile==0.47",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.17"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tfatp"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py313"
