[project]
name = "thanks-for-all-the-phish"
version = "0.1.0"
description = "Google Workspace Anti-Phishing Tool"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client==2.197.0",
    "google-auth==2.53.0",
    "google-auth-oauthlib==1.4.0",
    "google-auth-httplib2==0.4.0",
    "imapclient==3.1.0",
    "dkimpy==1.1.8",
    "dnspython==2.8.0",
    "tldextract==5.3.1",
    "beautifulsoup4==4.14.3",
    "google-cloud-pubsub==2.39.0",
    "rapidfuzz==3.14.5",
    "confusable-homoglyphs==3.3.1",
    "drawbridge==0.1.2",
    "httpx==0.28.1",
    "olefile==0.47",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.17"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tfatp"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py313"
